version/0.17/_sources/api/solver/_autosummary/settings/fluid.rst.txt
:orphan:

.. _fluid:

fluid
=====

.. autoclass:: ansys.fluent.core.solver.settings_232.fluid.fluid
    :show-inheritance:

.. rubric:: Methods

========================================   ==============================

Method                                                            Summary

========================================   ==============================
:ref:`list <list>`                                        'list' command.

:ref:`list_properties <list_properties>`       'list_properties' command.

:ref:`duplicate <duplicate>`                         'duplicate' command.

========================================   ==============================

.. rubric:: Named object type

:ref:`fluid_child <fluid_child>`


.. rubric:: Included in:

============================   ======================

Parent                                        Summary

============================   ======================
:ref:`materials <materials>`       'materials' child.

============================   ======================

